# letterboxd-rss

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  config.ini  pyproject.toml  requirements.txt  watchlist2rss.py
.github/workflows/: linters.yaml  publish.yaml
letterboxd_rss/: __init__.py  __main__.py  base.py  cli.py  constants.py  feed.py  parsing.py  session.py  utils.py
