[tool.poetry]
name = "letterboxd-rss"
version = "0.2.0"
description = "Generate an RSS feed from your letterboxd.com watchlist"
authors = ["Jan Willhaus <mail@janwillhaus.de>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/janw/letterboxd-rss"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: News/Diary",
]

[tool.poetry.dependencies]
python = "^3.6"
beautifulsoup4 = "^4.7"
requests = "^2.21"
feedgen = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^4.4"
pytest-cov = "^2.6"
pytest-vcr = "^1.0"
pytest-mock = "^1.10"

[tool.poetry.scripts]
letterboxd-rss = "letterboxd_rss.__main__:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
