[tool.poetry]
name = "letterboxd-rss"
version = "0.3.0"
description = "Generate an RSS feed from your letterboxd.com watchlist"
authors = ["Jan Willhaus <mail@janwillhaus.de>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/janw/letterboxd-rss"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: News/Diary",
]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.12"
requests = "^2.32"
feedgen = "^1.0"

[tool.poetry.group.dev.dependencies]
commitizen = "^3.29.1"
ruff = "0.3.5"
pre-commit = "^3.6.0"
mypy = "^1.8.0"
types-beautifulsoup4 = "*"

[tool.poetry.scripts]
letterboxd-rss = "letterboxd_rss.__main__:main"

[tool.commitizen]
version_scheme = "semver"
version_provider = "poetry"
version_files = [
    "pyproject.toml:version = ",
]
annotated_tag = true
tag_format = "v$version"
update_changelog_on_bump = true
changelog_start_rev = "0.3.0"
gpg_sign = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
